dev/ingress/fake89-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fake89-ingress
  namespace: fake89-ns
spec:
  ingressClassName: nginx
  rules:
    - host: fake89.dolphin.top
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fake89-service
                port:
                  number: 20089
